Release history for Dist-Zilla-App-Command-dumpphases

{{$NEXT}}

0.3.0 2013-08-22T09:38:29Z
 [!Major]
 - Now supports custom color themes controllable on the CLI
 - Internals have MetaPOD coverage

 [Dependencies::Added / runtime requires]
 - Module::Runtime
 - Moo
 - Role::Tiny

 [Documentation]
 - MetaPOD annotations and graphs added.

0.2.0 2013-08-21T14:32:08Z
 [!Major]
 - New feature, shows aggregate of plugins that were not in any predefined
   phase.
 - Better docs on a few phases.

 [Dependencies::Added / develop requires]
 - Test::Kwalitee 1.08

 [Dependencies::Added / test requires]
 - Capture::Tiny
 - blib

 [Dependencies::Changed / build requires]
 - Module::Build 0.4005 → 0.4007

 [Dependencies::Changed / configure requires]
 - Module::Build 0.4005 → 0.4007

 [Dependencies::Changed / develop suggests]
 - Dist::Zilla::PluginBundle::Author::KENTNL v1.7.3 → v1.8.0

 [Dependencies::Removed / test requires]
 - File::Find
 - File::Temp

0.1.4 2013-05-17T12:45:25Z
 [Dependencies::Added / develop requires]
 - Test::CPAN::Changes 0.19

 [Dependencies::Changed / build requires]
 - Module::Build 0.4003 → 0.4005

 [Dependencies::Changed / configure requires]
 - Module::Build 0.4003 → 0.4005

 [Dependencies::Changed / develop suggests]
 - Dist::Zilla::PluginBundle::Author::KENTNL v1.7.0 → v1.7.3

 [Documentation]
 - Change hotlink image URI to a github-pages based one to be more friendly
   to githubs service.
 - https://github.com/blog/1482-
 - https://help.github.com/articles/using-submodules-with-pages

 [Packaging]
 - Utilise test_requires

0.1.3 2013-01-25T23:04:24Z
 - Bugfix release

 [Bugs]
 - Load Term::ANSIColor lazily to stop it being loaded when all the other
   commands are ( Thanks Oliver Mengué ).

 [Dependencies::Added / develop requires]
 - Pod::Coverage::TrustPod
 - Test::CPAN::Meta
 - Test::Pod 1.41
 - Test::Pod::Coverage 1.08
 - version 0.9901

 [Dependencies::Changed / build requires]
 - Module::Build 0.3601 → 0.4003
