@@ -20,6 +20,8 @@ package Dist::Zilla::dumpphases::Theme::basic::blue;
 
     dzil dumpphases --color-theme=basic::blue
 
+=for html <center><img src="http://kentfredric.github.io/Dist-Zilla-App-Command-dumpphases/media/theme_basic_blue.png" alt="Screenshot" width="708" height="372"/></center>
+
 =cut
 
 use Moo;
