@@ -20,6 +20,8 @@ package Dist::Zilla::dumpphases::Theme::basic::green;
 
     dzil dumpphases --color-theme=basic::green
 
+=for html <center><img src="http://kentfredric.github.io/Dist-Zilla-App-Command-dumpphases/media/theme_basic_green.png" alt="Screenshot" width="715" height="372"/></center>
+
 =cut
 
 use Moo;
