@@ -21,6 +21,8 @@ package Dist::Zilla::dumpphases::Theme::basic::red;
 
     dzil dumpphases --color-theme=basic::red
 
+=for html <center><img src="http://kentfredric.github.io/Dist-Zilla-App-Command-dumpphases/media/theme_basic_red.png" alt="Screenshot" width="702" height="417"/></center>
+
 =cut
 
 use Moo;
