@@ -1,6 +1,11 @@
 Release history for Dist-Zilla-App-Command-dumpphases
 
 {{$NEXT}}
+ [Bug fixes]
+ - Accidentally left broken code with colored -> _colored transition
+
+ [Documentation]
+ - Screenshot images added to all the themes.
 
 0.3.0 2013-08-22T09:38:29Z
  [!Major]
